# math-assistant

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: _01_graph_CoT.md  _01_phases.md  _02_entity_resolution.md  _03_qdrant_graph_rag.md  usage.md
docs/usage/: agent.md  config.md  data.md  enrichment.md  inference.md  training.md  visualization.md
notebooks/data/: ingestion.ipynb  kg_generation.ipynb
notebooks/enrichment/: graph-cot.ipynb
notebooks/modeling/: math-agent-finetuning.ipynb  math-assistant-agent-v1.ipynb
scripts/: mvp.py
src/math_assistant_agent/: __init__.py  config.py
src/math_assistant_agent/agent/: __init__.py  agent.py  extractor.py  flow.py  generator.py  llm.py  memory.py  retriever.py  states.py
src/math_assistant_agent/data/: __init__.py  cleaning.py  formatting.py  graph.py  stackexchange.py
src/math_assistant_agent/enrichment/: __init__.py  concept_resolution.py  extractor.py  extractor_gemini.py  extractor_groq.py  gemini_client.py  graph_enrichment.py  groq_client.py  schemas.py
src/math_assistant_agent/inference/: model_loading.py  solver.py
src/math_assistant_agent/training/: lora.py  model_loading.py  quantization.py  trainer.py
src/math_assistant_agent/visualization/: __init__.py  pyvis_renderer.py  pyvis_renderer_v2.py
